--------------------------------------

General
* Adjusted 'input-path' attribute in 'job' element from required to optional

Package o.s.data.hadoop.cascading
* Replaced HadoopFlowFactoryBean/cascading-flow jarSetup param/attribute with addCascadingJars

Package o.s.data.hadoop.fs
* Fixed incorrect DistCp.copy() method
* Removed 'GenericOptionsParser' warning when invoking DistCp


Changes in version 1.0 RC2 (2013-01-21)
---------------------------------------

General
* Enhanced Cascading, Pig and MapReduce tasklets to expose execution stats to the Spring Batch infrastructure
* Enhanced Cascading and MapReduce tasklets and runners to support cancellation
* Introduced Cascading namespace
* Improved spring-hadoop.xsd namespace
* Extended test-suite to include CDH3u4, CDH4u2, Greenplum HD 1.2 and Apache Hadoop 1.1.x
* Improved reference documentation
* Upgraded to Cascading 2.1.2
* Upgraded to Hadoop 1.0.4
* Upgraded to Hive 0.10
* Upgraded to Pig 0.10.1
* Upgraded to Spring Integration 2.1.4
* Upgraded to Gradle 1.3
* Revised artifact Maven pom.xml to minimize number of dependencies
* Removed any logging library declaration (project relies on the 'commons-logging' transitive dependency)
* Removed o.s.data.hadoop.batch package

Package o.s.data.hadoop.cascading
* Refined local Taps timestamp for compatibility with Cascading 2.1
* Enhanced FlowFactoryBean to automatically add Cascading jars & dependencies to the target Flow when needed

Package o.s.data.hadoop.configuration
* Added top-level file-system/job-tracker uri attributes to the Configuration element

Package o.s.data.hadoop.fs
* Refined classpath setup for DistributedCache
* Added warning regarding invalid classpath setup on Windows platform for DistributedCache (see HADOOP-9123)
* Added work-around for early closing of the Hadoop file-system

Package o.s.data.hadoop.hbase
* Replaced HTable (class type) with HTableInterface (interface)
* Improved HTable release process based on their producing factories