@@ -18,6 +18,7 @@ package org.springframework.data.hadoop.fs;
 import java.io.IOException;
 import java.lang.reflect.Method;
 import java.lang.reflect.UndeclaredThrowableException;
+import java.security.PrivilegedExceptionAction;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.EnumSet;
@@ -25,6 +26,7 @@ import java.util.List;
 
 import org.apache.hadoop.conf.Configuration;
 import org.apache.hadoop.ipc.RemoteException;
+import org.apache.hadoop.security.UserGroupInformation;
 import org.apache.hadoop.tools.DistCp.DuplicationException;
 import org.springframework.data.hadoop.configuration.ConfigurationUtils;
 import org.springframework.util.Assert;
@@ -44,6 +46,7 @@ import org.springframework.util.StringUtils;
 public class DistCp {
 
 	private final Configuration configuration;
+	private String user;
 
 	/**
 	 * Constructs a new <code>DistCp</code> instance.
@@ -51,12 +54,18 @@ public class DistCp {
 	 * @param configuration Hadoop configuration to use.
 	 */
 	public DistCp(Configuration configuration) {
+		this(configuration, null);
+	};
+
+	public DistCp(Configuration configuration, String user) {
 		Assert.notNull(configuration, "configuration required");
 		this.configuration = ConfigurationUtils.createFrom(configuration, null);
 		// disable GenericOptionsParser
 		this.configuration.setBoolean("mapred.used.genericoptionsparser", true);
 		this.configuration.setBoolean("mapreduce.client.genericoptionsparser.used", true);
-	};
+
+		this.user = user;
+	}
 
 	/**
 	 * Enumeration for the possible attributes that can be preserved by a copy operation.
@@ -236,12 +245,28 @@ public class DistCp {
 	public void copy(String... arguments) {
 		Assert.notEmpty(arguments, "invalid number of arguments");
 		// sanitize the arguments
-		List<String> parsedArguments = new ArrayList<String>();
+		final List<String> parsedArguments = new ArrayList<String>();
 		for (String arg : arguments) {
 			parsedArguments.addAll(Arrays.asList(StringUtils.tokenizeToStringArray(arg, " ")));
 		}
 
-		invokeCopy(configuration, parsedArguments.toArray(new String[parsedArguments.size()]));
+		try {
+			if (StringUtils.hasText(user)) {
+				UserGroupInformation ugi = UserGroupInformation.createProxyUser(user, UserGroupInformation.getLoginUser());
+				ugi.doAs(new PrivilegedExceptionAction<Void>() {
+					@Override
+					public Void run() throws Exception {
+						invokeCopy(configuration, parsedArguments.toArray(new String[parsedArguments.size()]));
+						return null;
+					}
+				});
+			}
+			else {
+				invokeCopy(configuration, parsedArguments.toArray(new String[parsedArguments.size()]));
+			}
+		} catch (Exception ex) {
+			throw new IllegalStateException("Cannot run distCp impersonated as '" + user + "'", ex);
+		}
 	}
 
 	private static void invokeCopy(Configuration config, String[] parsedArgs) {
@@ -273,5 +298,15 @@ public class DistCp {
 
 			throw ex;
 		}
+	}
+
+	/**
+	 * Sets the user impersonation (optional) for creating this utility.
+	 * Should be used when running against a Hadoop Kerberos cluster. 
+	 * 
+	 * @param user user/group information
+	 */
+	public void setUser(String user) {
+		this.user = user;
 	}
 }
